force-app/main/default/objects/Student__c/fields/Area_of_Research__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Research__c</fullName>
    <label>Area of Research</label>
    <type>TextArea</type>
</CustomField>