force-app/main/default/objects/Student__c/recordTypes/Btech_Student.recordType-meta.xml
<RecordType>
    <fullName>Btech_Student</fullName>
    <active>true</active>
    <label>Btech Student</label>
</RecordType>