force-app/main/default/objects/Student__c/recordTypes/PHD_Student.recordType-meta.xml
<RecordType>
    <fullName>PHD_Student</fullName>
    <active>true</active>
    <description>Record Type for PHD Student</description>
    <label>PHD Student</label>
</RecordType>