force-app/main/default/objects/Student__c/validationRules/Background_Mandatory_for_CS.validationRule-meta.xml
<ValidationRule>
    <fullName>Background_Mandatory_for_CS</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Department__c ,&apos;Computer Science&apos;) &amp;&amp;  ISBLANK( Background__c )</errorConditionFormula>
    <errorMessage>Please enter Background</errorMessage>
</ValidationRule>