force-app/main/default/objects/Student__c/validationRules/Name_Cannot_be_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Cannot_be_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(Name__c)</errorConditionFormula>
    <errorDisplayField>Name__c</errorDisplayField>
    <errorMessage>Name cannot be changed once created</errorMessage>
</ValidationRule>