force-app/main/default/objects/Student__c/listViews/Mechanical_Student.listView-meta.xml
<ListView>
    <fullName>Mechanical_Student</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Department__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>Mechanical</value>
    </filters>
    <label>Mechanical Student</label>
</ListView>